accept panelHeight as props and rename types

--- a/app/docs/dock/page.mdx
+++ b/app/docs/dock/page.mdx
@@ -40,6 +40,7 @@ A versatile UI element that provides a flexible and customizable way to organize
 | spring        | SpringOptions | `{ mass: 0.1, stiffness: 150, damping: 12 }` | Spring options from framer-motion for animation effects.                                 |
 | magnification | number        | 80                                           | The scaling factor applied to a dock item on hover.                                      |
 | distance      | number        | 150                                          | The distance from the center of a dock item at which the magnification animation starts. |
+| panelHeight   | number        | 64                                           |
 
 ### DockItem
 
