feat: update dock doc

--- a/app/docs/dock/page.mdx
+++ b/app/docs/dock/page.mdx
@@ -13,7 +13,6 @@ import CodeBlock from '@/components/website/code-block';
 
 A versatile UI element that provides a flexible and customizable way to organize and display menu items within your application.
 
-- This component draws inspiration from a Magnified Dock implementation by [Build UI](https://buildui.com/recipes/magnified-dock)
 
 ## Examples
 
@@ -62,3 +61,8 @@ A versatile UI element that provides a flexible and customizable way to organize
 | :-------- | :-------- | :-------- | :-------------------------------------------- |
 | children  | ReactNode |           | Icon                                          |
 | className | string    | undefined | Optional CSS class for styling the component. |
+
+
+## Credits
+
+Created by [@kashyap20](https://github.com/kashyap20), inspired by [Build UI - Magnified Dock](https://buildui.com/recipes/magnified-dock)
