feat: add disableDrag props to Carousel

--- a/app/docs/carousel/page.mdx
+++ b/app/docs/carousel/page.mdx
@@ -66,6 +66,7 @@ We can use `index` and `onIndexChange` to create custom indicators for the carou
 | `initialIndex`  | `number`                     | `0`     | Initial index of the active carousel item.             |
 | `index`         | `number`                     |         | Controlled index of the active carousel item.          |
 | `onIndexChange` | `(newIndex: number) => void` |         | Callback function when the active index changes.       |
+| `disableDrag` | `boolean`    | `false` | Whether dragging is disabled.                          |
 
 ### CarouselNavigation
 
