feat: improve documentation with missing utilities

--- a/app/docs/accordion/page.mdx
+++ b/app/docs/accordion/page.mdx
@@ -47,6 +47,10 @@ Here, we apply `-rotate-180` to rotate the icon 180 degrees when its associated 
 
 <CodeBlock filePath='components/core/accordion.tsx' />
 
+**Please add:**
+
+- [cn](https://github.com/ibelick/motion-primitives/blob/main/lib/utils.ts)
+
 ## Component API
 
 ### Accordion
