--- a/app/docs/animated-group/page.mdx
+++ b/app/docs/animated-group/page.mdx
@@ -47,6 +47,10 @@ Images are from [cosmos - Impressionisme](https://www.cosmos.so/ibelick/impressi
 
 <CodeBlock filePath='components/core/animated-group.tsx' />
 
+**Please add:**
+
+- [cn](https://github.com/ibelick/motion-primitives/blob/main/lib/utils.ts)
+
 ## Component API
 
 ### AnimatedGroup
