--- a/app/docs/animated-number/page.mdx
+++ b/app/docs/animated-number/page.mdx
@@ -42,6 +42,10 @@ Easily animate numbers.
 
 <CodeBlock filePath='components/core/animated-number.tsx' />
 
+**Please add:**
+
+- [cn](https://github.com/ibelick/motion-primitives/blob/main/lib/utils.ts)
+
 ## Component API
 
 | Prop          | Type          | Default | Description                                               |
