--- a/app/docs/carousel/page.mdx
+++ b/app/docs/carousel/page.mdx
@@ -55,6 +55,10 @@ We can use `index` and `onIndexChange` to create custom indicators for the carou
 
 <CodeBlock filePath='components/core/carousel.tsx' />
 
+**Please add:**
+
+- [cn](https://github.com/ibelick/motion-primitives/blob/main/lib/utils.ts)
+
 ## Component API
 
 ### Carousel
@@ -66,7 +70,7 @@ We can use `index` and `onIndexChange` to create custom indicators for the carou
 | `initialIndex`  | `number`                     | `0`     | Initial index of the active carousel item.             |
 | `index`         | `number`                     |         | Controlled index of the active carousel item.          |
 | `onIndexChange` | `(newIndex: number) => void` |         | Callback function when the active index changes.       |
-| `disableDrag` | `boolean`    | `false` | Whether dragging is disabled.                          |
+| `disableDrag`   | `boolean`                    | `false` | Whether dragging is disabled.                          |
 
 ### CarouselNavigation
 
