--- a/app/docs/infinite-slider/page.mdx
+++ b/app/docs/infinite-slider/page.mdx
@@ -41,6 +41,10 @@ Infinite scrolling slider component that smoothly loops through its children. It
 
 <CodeBlock filePath='components/core/infinite-slider.tsx' />
 
+**Please add:**
+
+- [cn](https://github.com/ibelick/motion-primitives/blob/main/lib/utils.ts)
+
 ## Component API
 
 ### InfiniteSlider
