--- a/app/docs/text-effect/page.mdx
+++ b/app/docs/text-effect/page.mdx
@@ -77,10 +77,13 @@ Easily animate text content with various effects. You can apply animations per c
   hasReTrigger
 />
 
-
 ## Code
 
 <CodeBlock filePath='components/core/text-effect.tsx' />
+
+**Please add:**
+
+- [cn](https://github.com/ibelick/motion-primitives/blob/main/lib/utils.ts)
 
 ## Component API
 
