--- a/app/docs/dock/page.mdx
+++ b/app/docs/dock/page.mdx
@@ -13,7 +13,6 @@ import CodeBlock from '@/components/website/code-block';
 
 A versatile UI element that provides a flexible and customizable way to organize and display menu items within your application.
 
-
 ## Examples
 
 ### Apple style dock
@@ -27,6 +26,10 @@ A versatile UI element that provides a flexible and customizable way to organize
 ## Code
 
 <CodeBlock filePath='components/core/dock.tsx' />
+
+**Please add:**
+
+- [cn](https://github.com/ibelick/motion-primitives/blob/main/lib/utils.ts)
 
 ## Component API
 
@@ -61,7 +64,6 @@ A versatile UI element that provides a flexible and customizable way to organize
 | :-------- | :-------- | :-------- | :-------------------------------------------- |
 | children  | ReactNode |           | Icon                                          |
 | className | string    | undefined | Optional CSS class for styling the component. |
-
 
 ## Credits
 
