--- a/app/docs/animated-number/page.mdx
+++ b/app/docs/animated-number/page.mdx
@@ -22,6 +22,7 @@ Easily animate numbers.
   component={<AnimatedNumberBasic />}
   filePath='examples/animated-number-basic'
   hasReTrigger
+  classNameComponentContainer='min-h-[250px]'
 />
 
 ### Basic counter
@@ -29,6 +30,7 @@ Easily animate numbers.
 <ComponentCodePreview
   component={<AnimatedNumberCounter />}
   filePath='examples/animated-number-counter'
+  classNameComponentContainer='min-h-[250px]'
 />
 
 ### With useInView
@@ -36,6 +38,7 @@ Easily animate numbers.
 <ComponentCodePreview
   component={<AnimatedNumberInView />}
   filePath='examples/animated-number-in-view'
+  classNameComponentContainer='min-h-[250px]'
 />
 
 ## Code
