--- a/app/docs/disclosure/page.mdx
+++ b/app/docs/disclosure/page.mdx
@@ -37,6 +37,10 @@ Image from [Les others studio](https://www.instagram.com/p/Crvt1j8tybi/?img_inde
 
 <CodeBlock filePath='components/core/disclosure.tsx' />
 
+**Please add:**
+
+- [cn](https://github.com/ibelick/motion-primitives/blob/main/lib/utils.ts)
+
 ## Component API
 
 ### Disclosure
