--- a/app/docs/scroll-progress/page.mdx
+++ b/app/docs/scroll-progress/page.mdx
@@ -6,6 +6,7 @@ export const metadata = {
 import { ScrollProgress } from '@/components/core/scroll-progress';
 import { ScrollProgressBasic1 } from '@/components/examples/scroll-progress-basic-1';
 import { ScrollProgressBasic2 } from '@/components/examples/scroll-progress-basic-2';
+import { ScrollProgressBasic3 } from '@/components/examples/scroll-progress-basic-3';
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
@@ -25,12 +26,22 @@ Animated scroll progress for your web pages.
   filePath='examples/scroll-progress-basic-2'
 />
 
+<ComponentCodePreview
+  component={<ScrollProgressBasic3 />}
+  filePath='examples/scroll-progress-basic-3'
+/>
+
 ## Code
 
 <CodeBlock filePath='components/core/scroll-progress.tsx' />
 
 ## Component API
 
-| Prop      | Type   | Default | Description                                         |
-| :-------- | :----- | :------ | :-------------------------------------------------- |
-| className | string |         | Optional CSS class for styling the scroll progress. |
+| Prop          | Type          | Default | Description                                         |
+| :------------ | :------------ | :------ | :-------------------------------------------------- |
+| className     | string        |         | Optional CSS class for styling the scroll progress. |
+| springOptions | SpringOptions |         | Spring options for the scroll progress animation.   |
+
+## Credit
+
+Initiated by [@bhataasim1](https://github.com/bhataasim1)
