fix: containerRef scroll-progress (#59)
* fix: containerRef scroll-progress

* feat: add layoutEffect to useScroll

--- a/app/docs/scroll-progress/page.mdx
+++ b/app/docs/scroll-progress/page.mdx
@@ -37,10 +37,11 @@ Animated scroll progress for your web pages.
 
 ## Component API
 
-| Prop          | Type          | Default | Description                                         |
-| :------------ | :------------ | :------ | :-------------------------------------------------- |
-| className     | string        |         | Optional CSS class for styling the scroll progress. |
-| springOptions | SpringOptions |         | Spring options for the scroll progress animation.   |
+| Prop          | Type          | Default | Description                                                |
+| :------------ | :------------ | :------ | :--------------------------------------------------------- |
+| className     | string        |         | Optional CSS class for styling the scroll progress.        |
+| springOptions | SpringOptions |         | Optional spring options for the scroll progress animation. |
+| containerRef  | RefObject     |         | Optional Ref object for the container element.             |
 
 ## Credit
 
