docs: missing titles

--- a/app/docs/border-trail/page.mdx
+++ b/app/docs/border-trail/page.mdx
@@ -16,7 +16,7 @@ Animated border effect that moves along the edges of its parent container.
 
 ## Examples
 
-### Border Trail
+### Border Trail Card
 
 <ComponentCodePreview
   component={<BorderTrailCard1 />}
