--- a/app/docs/dialog/page.mdx
+++ b/app/docs/dialog/page.mdx
@@ -16,15 +16,21 @@ A dialog that smoothly transitions content into a focused view using layout anim
 
 ## Examples
 
+### Dialog Basic
+
 <ComponentCodePreview
   component={<DialogBasicOne />}
   filePath='examples/dialog-basic-1'
 />
 
+### Dialog Basic 2
+
 <ComponentCodePreview
   component={<DialogBasicTwo />}
   filePath='examples/dialog-basic-2'
 />
+
+### Dialog Image
 
 <ComponentCodePreview
   component={<DialogBasicImage />}
