--- a/app/docs/scroll-progress/page.mdx
+++ b/app/docs/scroll-progress/page.mdx
@@ -16,15 +16,21 @@ Animated scroll progress for your web pages.
 
 ## Examples
 
+### Scroll Progress Basic
+
 <ComponentCodePreview
   component={<ScrollProgressBasic1 />}
   filePath='examples/scroll-progress-basic-1'
 />
 
+### Scroll Progress Navigation
+
 <ComponentCodePreview
   component={<ScrollProgressBasic2 />}
   filePath='examples/scroll-progress-basic-2'
 />
+
+### Scroll Progress Gradient
 
 <ComponentCodePreview
   component={<ScrollProgressBasic3 />}
