--- a/app/docs/text-effect/page.mdx
+++ b/app/docs/text-effect/page.mdx
@@ -69,7 +69,7 @@ Easily animate text content with various effects. You can apply animations per c
   hasReTrigger
 />
 
-## Text Effect with exit animation
+### Text Effect with exit animation
 
 <ComponentCodePreview
   component={<TextEffectWithExit />}
