docs: update intro text

--- a/app/docs/page.mdx
+++ b/app/docs/page.mdx
@@ -1,27 +1,23 @@
 # Motion-Primitives
 
-Beautifully designed motion components. Easy copy-paste. Customizable. Open Source. Built for engineers and designers.
+Make your website look better with beautifully designed motion components.<br />
+Easy to use. Customizable. Open Source.
+Built for engineers, designers, and founders.
 
-Motion-Primitives is a project dedicated to showcasing animated components built with Framer Motion and Tailwind CSS. This repository offers a curated collection of reusable components designed to enhance your web applications or marketing websites with beautiful, smooth animations.
-
-**The project is currently in beta. The code and styles of the components are subject to change as we continue to refine and improve the collection. We welcome your feedback and contributions to help make this project better.**
+Motion-Primitives offers a collection of reusable animated components built with Framer Motion and Tailwind CSS. Add smooth, engaging animations to your web projects, making them more interactive and enjoyable.
 
 ## Vision
 
-As a developer keen on growing my skills in animation and motion design, I often found it challenging to find practical, high-quality code examples of animated components that were not just theoretical but also applicable to real-world projects. This gap inspired me to create Motion-Primitives.
+As a developer, I struggled to find practical, high-quality animated components suitable for real-world projects. Motion-Primitives was created to fill this gap, providing ready-to-use, customizable components that improve marketing websites and web applications.
 
-### Ready-to-use components
+### Easy to Use and customize
 
-All components are fully documented with examples, ready for implementation and customization across various projects.
+Each component has comprehensive examples and detailed documentation. You can use them directly or easily modify them to align with your custom UI kit, design system, or specific requirements.
 
-### Community contribution
+### Built around Framer Motion
 
-With an open-source approach, Motion-Primitives strives to build a diverse, free and open collection of animated components.
+All components are built with Framer Motion to ensure a solid foundation and showcase the library's capabilities. Future plans include versions using CSS and Tailwind CSS only.
 
-### Style flexibility
+### Open source and community-driven
 
-Starting with styled versions during the beta phase, with plans to offer unstyled alternatives that can easily integrate into any existing design system or theme.
-
-### Accessible
-
-Ensuring that all components meet high accessibility standards, making them usable for everyone. We are thinking about using radix-ui or shadcn/ui for each component.
+Motion-Primitives is open-source. Contributions are welcome to expand and improve the collection.
