--- a/app/docs/spotlight/page.mdx
+++ b/app/docs/spotlight/page.mdx
@@ -1,10 +1,12 @@
 export const metadata = {
   title: 'Spotlight - Motion-Primitives',
-  description: 'A dynamic spotlight effect that follows the cursor, highlighting elements on the page.',
+  description:
+    'A dynamic spotlight effect that follows the cursor, highlighting elements on the page.',
 };
 
 import { SpotlightBasic } from '@/components/examples/spotlight-basic';
-import { SpotlightCards } from '@/components/examples/spotlight-cards';
+import { SpotlightCards } from '@/components/examples/spotlight-card'
+import { SpotlightInteractiveMap } from '@/components/examples/spotlight-interactive-map'
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
@@ -22,12 +24,16 @@ The Spotlight component creates a dynamic spotlight effect that follows the curs
 />
 
 ### Spotlight with Cards
-
 <ComponentCodePreview
   component={<SpotlightCards />}
-  filePath='examples/spotlight-cards'
+  filePath='examples/spotlight-card'
 />
 
+### Spotlight with Maps
+<ComponentCodePreview
+  component={<SpotlightInteractiveMap />}
+  filePath='examples/spotlight-interactive-map'
+/>
 ## Code
 
 <CodeBlock filePath='components/core/spotlight.tsx' />
@@ -38,12 +44,13 @@ The Spotlight component creates a dynamic spotlight effect that follows the curs
 
 ## Component API
 
-| Prop         | Type                | Default                           | Description                                               |
-| :----------- | :------------------ | :-------------------------------- | :-------------------------------------------------------- |
-| children     | React.ReactNode     |                                   | The content to be wrapped by the spotlight effect.        |
-| className    | string              | ''                                | Additional CSS classes for styling the container.         |
-| spotlightSize| number              | 200                               | The size of the spotlight in pixels.                      |
-| color        | string              | 'rgba(255, 255, 255, 0.85)'       | The color of the spotlight effect.                        |
-| opacity      | number              | 0.15                              | The opacity of the spotlight effect.                      |
-| blur         | number              | 40                                | The blur amount of the spotlight effect in pixels.        |      
-| transition   | object              | `{ type: 'spring', stiffness: 400, damping: 25 }` | Custom transition settings for the spotlight movement.    |
+| Prop           | Type            | Default                           | Description                                        |
+| :------------  | :-------------- | :-------------------------------- | :------------------------------------------------- |
+| children       | React.ReactNode |                                   | The content to be wrapped by the spotlight effect. |
+| className      | string          | ''                                | Additional CSS classes for styling the container.  |
+| spotlightSize  | number          | 200                               | The size of the spotlight in pixels.               |
+| color          | string          | 'rgba(255, 255, 255, 0.85)'       | The color of the spotlight effect.                 |
+| opacity        | number          | 0.15                              | The opacity of the spotlight effect.               |
+| blur           | number          | 40                                | The blur amount of the spotlight effect in pixels. |
+| attachToParent | boolean         | false                             | If `true`, spotlight will only be visible when hovering over its parent component.   |
+| springOptions  | SpringOptions   | `{ stiffness: 400, damping: 25 }` | Custom spring settings for the spotlight movement.  |
