feat: add text-morph-input

--- a/app/docs/text-morph/page.mdx
+++ b/app/docs/text-morph/page.mdx
@@ -5,6 +5,7 @@ export const metadata = {
 };
 
 import { TextMorphButton } from '@/components/examples/text-morph-button';
+import { TextMorphInput } from '@/components/examples/text-morph-input';
 import ComponentCodePreview from '@/components/website/component-code-preview';
 import CodeBlock from '@/components/website/code-block';
 
@@ -19,6 +20,14 @@ Animates text by morphing shared letters between words, creating fluid transitio
 <ComponentCodePreview
   component={<TextMorphButton />}
   filePath='examples/text-morph-button'
+/>
+
+### Text Morph Input
+
+<ComponentCodePreview
+  component={<TextMorphInput />}
+  filePath='examples/text-morph-input'
+  classNameComponentContainer='min-h-[300px] py-24 lg:px-32 px-8 items-end'
 />
 
 ## Code
